Phase5/negative_tests/prog4.dlp

//Missing ')'
while (3 > 2
    continue;

return 0;